force-app/main/default/objects/sf_devops__Deployment_Result__c/sf_devops__Deployment_Result__c.object-meta.xml
<CustomObject>
    <description>Stores the results of a metadata deployment to a Salesforce organization</description>
    <label>Deployment Result</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deployment Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>