force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Check_Deploy_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Check_Deploy_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The status of the Check Deploy.</description>
    <label>Check Deploy Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Check Deploy Results</relationshipLabel>
    <relationshipName>Check_Deploy_Results</relationshipName>
    <type>Lookup</type>
</CustomField>