force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Full_Deploy__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Full_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this deployment for all metadata in the repository, or just metadata that we tracked as changed</description>
    <label>Full Deploy</label>
    <type>Checkbox</type>
</CustomField>