force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Run_Tests__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Run_Tests__c</fullName>
    <description>If the test level is RunSpecifiedTests, this is a comma separated list of tests that are run.</description>
    <label>Run Tests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>