force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The status of the promote operation where this deployment is involved.</description>
    <label>Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Deployment Results</relationshipLabel>
    <relationshipName>Deployment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>